# islands

./: .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  islands.example.yaml  main.go  pyproject.toml  pythia.example.toml  pythia.example.yaml  release-please-config.json  renovate.json
.claude-flow/metrics/: performance.json  task-metrics.json
.claude-plugin/: marketplace.json
.claude/skills/: CHANGELOG.md  islands-index.md  islands-list.md  islands-mcp.md  islands-search.md  pythia-index.md  pythia-list.md  pythia-mcp.md  pythia-search.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  docker.yaml  helm.yaml  release.yaml  release.yml  rust.yaml
benches/: hnsw_benchmarks.rs  pq_compression.rs  vector_ops.rs
charts/islands/: Chart.yaml  values.yaml
charts/islands/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
crates/.claude-flow/metrics/: performance.json  task-metrics.json
crates/islands-agent/: Cargo.toml
crates/islands-agent/src/: agent.rs  error.rs  lib.rs  llm.rs  prompt.rs
crates/islands-cli/: Cargo.toml
crates/islands-cli/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
crates/islands-core/: Cargo.toml
crates/islands-core/benches/: hnsw_benchmarks.rs  pq_compression.rs  vector_ops.rs
crates/islands-core/proptest-regressions/: leann.txt
crates/islands-core/src/: distance.rs  error.rs  hnsw.rs  leann.rs  lib.rs  pq.rs  search.rs  storage.rs
crates/islands-core/src/embedding/: mod.rs  provider.rs
crates/islands-indexer/: Cargo.toml
crates/islands-indexer/src/: error.rs  lib.rs  manager.rs  service.rs  state.rs
crates/islands-mcp/: Cargo.toml
crates/islands-mcp/src/: error.rs  lib.rs  server.rs  tools.rs
crates/islands-providers/: Cargo.toml
crates/islands-providers/src/: auth.rs  base.rs  bitbucket.rs  error.rs  factory.rs  github.rs  lib.rs  provider.rs
crates/pythia-agent/: Cargo.toml
crates/pythia-agent/src/: agent.rs  error.rs  lib.rs  prompt.rs
crates/pythia-cli/: Cargo.toml
crates/pythia-cli/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
crates/pythia-core/: Cargo.toml
crates/pythia-core/benches/: hnsw_benchmarks.rs  pq_compression.rs  vector_ops.rs
crates/pythia-core/src/: error.rs  lib.rs
crates/pythia-core/src/embedding/: mod.rs  provider.rs
crates/pythia-indexer/: Cargo.toml
crates/pythia-indexer/src/: error.rs  lib.rs  manager.rs  service.rs  state.rs
crates/pythia-mcp/: Cargo.toml
crates/pythia-mcp/src/: error.rs  lib.rs  protocol.rs  server.rs  tools.rs
crates/pythia-providers/: Cargo.toml
crates/pythia-providers/src/: base.rs  error.rs  gitea.rs  gitlab.rs  lib.rs  repository.rs
deployments/docker/: Dockerfile  Dockerfile.leann  docker-compose.yml
deployments/docker/leann/: requirements.txt  service.py  supervisord.conf
docker/: Dockerfile  docker-compose.yml
docs/: leann-specification.md
docs/api/: MCP_API.md
docs/architecture/: leann-integration-adr.md
docs/research/: LEANN.md  MCP.md
examples/: README.md
examples/embedding-providers/: README.md  main.rs
examples/local-indexing/: README.md  main.rs
examples/mcp-integration/: README.md  main.rs
examples/multi-repo-search/: README.md  main.rs
internal/analyzer/: analyzer.go  analyzer_test.go
internal/config/: config.go  config_test.go
internal/git/: provider.go  provider_test.go
internal/indexer/: indexer.go  indexer_test.go
internal/mcp/: server.go  server_test.go
internal/storage/: storage.go  storage_test.go
k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
pkg/leann/: client.go  client_test.go
pkg/types/: types.go  types_test.go
plugins/c4/: CHANGELOG.md  plugin.json
plugins/c4/commands/: c4.md
plugins/c4/skills/c4-model-generator/: SKILL.md
plugins/c4/skills/c4-model-generator/references/: c4-schema.md  element-patterns.md
plugins/c4/skills/c4-model-generator/resources/templates/: c4.mod.yaml.template  components.yaml.template  containers.yaml.template  deployment.yaml.template  flow.yaml.template  personas.yaml.template  relationships.yaml.template  system.yaml.template
plugins/c4/skills/c4-model-generator/scripts/: analyze-rust.sh  validate-c4.sh
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs
src/agent/: error.rs  llm.rs  mod.rs  prompt.rs  service.rs
src/core/: distance.rs  hnsw.rs  leann.rs  mod.rs  pq.rs  search.rs  storage.rs
src/core/embedding/: candle_provider.rs  mod.rs  provider.rs
src/indexer/: error.rs  manager.rs  mod.rs  service.rs  state.rs  watcher.rs
src/mcp/: error.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/providers/: base.rs  bitbucket.rs  factory.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  provider.rs  webhook.rs
src/pythia/: __init__.py  agent.py  cli.py  mcp_server.py
src/pythia/agent/: __init__.py  assistant.py
src/pythia/config/: __init__.py  settings.py
src/pythia/indexer/: __init__.py  repository.py  service.py
src/pythia/mcp/: __init__.py  server.py
src/pythia/providers/: __init__.py  base.py  bitbucket.py  factory.py  gitea.py  github.py  gitlab.py
src/pythia/storage/: __init__.py  efs.py  watcher.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_mcp.py  test_providers.py  test_repository.py  test_storage.py
