[package]
name = "islands"
description = "LEANN-based codebase indexing with MCP server and AI-powered search"
version = "1.0.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Jonathan Reyes <me@jonathanreyes.com>"]
repository = "https://github.com/panbanda/islands"
documentation = "https://github.com/panbanda/islands#readme"
keywords = ["mcp", "semantic-search", "codebase-indexing", "leann", "rag", "vector-database"]
categories = ["command-line-utilities", "development-tools", "science"]

[[bin]]
name = "islands"
path = "src/main.rs"

[lib]
name = "islands"
path = "src/lib.rs"

[features]
default = ["mcp", "agent", "watch"]
mcp = []
agent = []
watch = ["notify"]
embeddings = ["embed_anything"]
metal = ["embeddings", "embed_anything/metal"]
cuda = ["embeddings", "embed_anything/cuda"]
openai = []
anthropic = []

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.13", features = ["json", "query", "rustls", "stream"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Cryptography for webhook verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# OpenSSL (vendored for cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }

# Git operations
gix = { version = "0.77", default-features = false, features = ["blocking-network-client"] }
git2 = "0.20"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Path handling
directories = "6.0"
camino = { version = "1.2", features = ["serde1"] }

# UUID generation
uuid = { version = "1.19", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.22"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# File watching (optional)
notify = { version = "8.0", optional = true }

# Async file operations
tokio-util = { version = "0.7.18", features = ["io"] }

# Vector operations
ndarray = "0.16"
ordered-float = "5.0"
rand = "0.8"
rand_chacha = "0.3"
parking_lot = "0.12"

# Embedding models (optional)
embed_anything = { version = "0.6", optional = true }

# Directory walking
walkdir = "2.5"
ignore = "0.4"

# Pretty terminal output
console = "0.16"
indicatif = "0.18"
tabled = "0.20"

# Streaming for agent
async-stream = "0.3"

[dev-dependencies]
mockall = "0.14"
tempfile = "3.24"
wiremock = "0.6"
proptest = "1.9"
proptest-derive = "0.7"
criterion = "0.6"
pretty_assertions = "1.4"
rstest = "0.26"
test-case = "3.3"
assert_matches = "1.5"
insta = "1.46"
tracing-test = "0.2"
tokio-test = "0.4"
assert_cmd = "2.1"
predicates = "3.1"

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = "thin"
codegen-units = 1

[[bench]]
name = "hnsw_benchmarks"
harness = false

[[bench]]
name = "vector_ops"
harness = false

[[bench]]
name = "pq_compression"
harness = false
