[package]
name = "islands-cli"
description = "Command-line interface for Islands codebase indexing system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "islands"
path = "src/main.rs"

[features]
default = ["mcp", "agent"]
mcp = ["islands-mcp"]
agent = ["islands-agent"]

[dependencies]
islands-core.workspace = true
islands-indexer.workspace = true
islands-providers.workspace = true
islands-mcp = { workspace = true, optional = true }
islands-agent = { workspace = true, optional = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

# Pretty terminal output
console = "0.16.2"
indicatif = "0.18.3"
tabled = "0.20"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[lints]
workspace = true
