[package]
name = "islands-mcp"
description = "MCP (Model Context Protocol) server implementation for Islands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["mcp", "model-context-protocol", "ai", "claude"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# Internal crates
islands-core = { workspace = true }
islands-providers = { workspace = true }
islands-indexer = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID for request IDs
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
pretty_assertions = { workspace = true }

[lints]
workspace = true
