[package]
name = "islands-providers"
description = "Git provider implementations for Islands - GitHub, GitLab, Bitbucket, Gitea"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["git", "github", "gitlab", "bitbucket", "gitea"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Cryptography for webhook verification
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Date/time
chrono = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# URL parsing
url = { workspace = true }

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
pretty_assertions = { workspace = true }

[lints]
workspace = true
